# back/auth/internal/infrastructure/primary/handlers/handlers/permissionshandlers/dtos/request/create-permission.go
@@ -1,6 +1,9 @@
 package request
 
 type CreatePermissionRequest struct {
-	Name     string `json:"name" binding:"required"`
-	ModuleID uint   `json:"module_id" binding:"required"`
+	Write    bool `json:"write" binding:"required"`
+	Read     bool `json:"read" binding:"required"`
+	Update   bool `json:"update" binding:"required"`
+	Delete   bool `json:"delete" binding:"required"`
+	ModuleID uint `json:"module_id" binding:"required"`
 }
