# back/auth/internal/infrastructure/primary/handlers/handlers/permissionshandlers/mappers/permission-response.go
@@ -1,11 +1,31 @@
 package mappers
 
-// MapToPermissionResponse transforma un PermissionDTO a PermissionResponse.
-// func MapToPermissionResponse(dto *permissionsdtos.PermissionDTO) *response.PermissionResponse {
-// 	return &response.PermissionResponse{
-// 		// Suponiendo que dto tenga los campos correspondientes
-// 		// Incluimos ID si está presente en dto
-// 		ID:   dto.ID,
-// 		Name: dto.Name,
-// 	}
-// }
+import (
+	"auth/internal/domain/permissions/permissionsdtos"
+	"auth/internal/infrastructure/primary/handlers/handlers/permissionshandlers/dtos/response"
+)
+
+// MapToPermissionResponse mapea un PermissionDTO a un PermissionResponse
+func MapToPermissionResponse(dto *permissionsdtos.PermissionDTO) *response.PermissionResponse {
+	return &response.PermissionResponse{
+		BusinessesID:   dto.BusinessesID,
+		BusinessesName: dto.BusinessesName,
+		UserID:         dto.UserID,
+		UserName:       dto.UserName,
+		RoleID:         dto.RoleID,
+		Role:           dto.Role,
+		Write:          dto.Write,
+		Read:           dto.Read,
+		Delete:         dto.Delete,
+		Update:         dto.Update,
+	}
+}
+
+// MapToPermissionResponseList mapea una lista de PermissionDTO a una lista de PermissionResponse
+func MapToPermissionResponseList(dtos []permissionsdtos.PermissionDTO) []response.PermissionResponse {
+	responses := make([]response.PermissionResponse, len(dtos))
+	for i, dto := range dtos {
+		responses[i] = *MapToPermissionResponse(&dto)
+	}
+	return responses
+}
